Fix watermark alignment

--- a/src/components/v3/LabelWrapper/styles.module.css
+++ b/src/components/v3/LabelWrapper/styles.module.css
@@ -114,6 +114,7 @@
 }
 
 .watermarkBody {
+    text-align: center;
     color: rgba(0, 0, 0, 0.2);
     font-size: 15rem;
     font-weight: bold;
